# sync

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: clipboard_sync.rs  main.rs
apps/desktop/src-tauri/src/core/: discovery.rs  network.rs  protocol.rs  session.rs
apps/desktop/src-tauri/src/platform/: macos.rs  windows.rs
apps/desktop/src/components/: LayoutEditor.tsx  PairingFlow.tsx
apps/desktop/src/lib/: tauri.ts
docs/: architecture.md  distribution.md  setup.md  threat-model.md  troubleshooting.md  validation-matrix.md
shared/proto/: messages.ts
