[package]
name = "sync"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
rand = "0.8.5"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio-rustls = "0.26.0"
rcgen = "0.13.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tauri = { version = "2.0.1", features = [] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
directories = "5.0.1"
mdns-sd = "0.11.3"
arboard = "3.4.0"
rdev = "0.5.3"
whoami = "1.5"
if-addrs = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
